Remove some code duplication, move known call implementors to own class
- Encapsulated and created getters for fields so they can be used
  outside of their own package.

- Move known call implementor out of PythonFunctionSignature
  (which is a data class that stores the signature of a function
   and the required details to call it) to it own implementor class.